<resources>
    <string name="app_name">SeatReservation Employee</string>
    <string name="login">Zaloguj się</string>
    <string name="login_value">Login</string>
    <string name="seatreservation_image_desc">SeatReservation Image</string>
    <string name="password_value">Hasło</string>
    <string name="users_issues">Problemy użytkowników</string>
    <string name="qr_code_scan">Skanowanie kodów QR</string>
    <string name="date_from_api_loading">Pobieranie daty z API…</string>
    <string name="date_from_api_success">Pobrano datę z API!</string>
    <string name="date_from_api_error">Nie udało się pobrać daty z API! Błąd:</string>
    <string name="update_reservations_loading">Usuwanie zaległych rezerwacji…</string>
    <string name="update_reservations_success">Usunięto zaległe rezerwacje!</string>
    <string name="update_reservations_error">Nie udało się usunąć zaległych rezerwacji! Błąd:</string>
    <string name="send_message">Wyślij wiadomość</string>
    <string name="message_to_user">Wiadomość do użytkownika…</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean egestas orci quis mauris porttitor, id ullamcorper nisi molestie. Nulla eget pretium erat. Curabitur imperdiet pellentesque tellus, et maximus tellus pellentesque non. Fusce at mi ut magna interdum cursus. Cras tempor urna neque, ut aliquam erat pharetra eget. Maecenas consectetur nulla et finibus eleifend. Vestibulum ante ipsum primis in faucibus morbi.</string>
    <string name="no_issues">Brak zgłoszeń od użytkowników</string>
    <string name="empty_string">Nie podano loginu oraz hasła!</string>
    <string name="no_internet_connection">Brak połączenia z internetem!</string>
    <string name="mail_sent_succes">Wysyłanie maila powiodło się</string>
    <string name="mail_sent_failure">Wysyłanie maila niepowiodło się</string>
</resources>